cleaning html tags properly; added log